Revert "-Adds AgendaApi repository"
This reverts commit b40dea7477f0dbc49dd07856c29ead96e5176854.

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -15,9 +15,7 @@
             app:destination="@id/registerFragment" />
         <action
             android:id="@+id/action_loginFragment_to_agendaFragment"
-            app:destination="@id/agendaFragment"
-            app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
+            app:destination="@id/agendaFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -26,9 +24,7 @@
         tools:layout="@layout/fragment_register" >
         <action
             android:id="@+id/action_registerFragment_to_agendaFragment"
-            app:destination="@id/agendaFragment"
-            app:popUpTo="@id/registerFragment"
-            app:popUpToInclusive="true" />
+            app:destination="@id/agendaFragment" />
     </fragment>
     <fragment
         android:id="@+id/agendaFragment"
