-Added add attendee functionality -Disables add attendee button if email is invalid -Adds UiText sealed class -If there is a token in prefs, then main activity directs fragment to agenda screen

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -118,4 +118,9 @@
         </argument>
     </fragment>
     <action android:id="@+id/action_global_editFragment" app:destination="@id/editFragment"/>
+    <action
+        android:id="@+id/action_global_agendaFragment"
+        app:destination="@id/agendaFragment"
+        app:popUpTo="@id/loginFragment"
+        app:popUpToInclusive="true" />
 </navigation>
