-Sends only agenda item Id from through fragment and receives the rest of the info from local database -Maps event suspend function with supervisor scope and async -Makes global reference to ImageStorage in EventRepositoryImpl.kt -Deletes load all images

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -55,8 +55,8 @@
         android:name="com.andrew.tasky.agenda.presentation.screens.event_detail.EventDetailFragment"
         android:label="EventDetailFragment" >
         <argument
-            android:name="event"
-            app:argType="com.andrew.tasky.agenda.domain.models.AgendaItem$Event"
+            android:name="eventId"
+            app:argType="string"
             app:nullable="true"
             />
         <argument
@@ -73,8 +73,8 @@
         android:label="fragment_reminder_detail"
         tools:layout="@layout/fragment_reminder_detail" >
         <argument
-            android:name="reminder"
-            app:argType="com.andrew.tasky.agenda.domain.models.AgendaItem$Reminder"
+            android:name="reminderId"
+            app:argType="string"
             app:nullable="true"
             />
         <argument
@@ -88,8 +88,8 @@
         android:label="fragment_task_detail"
         tools:layout="@layout/fragment_task_detail" >
         <argument
-            android:name="task"
-            app:argType="com.andrew.tasky.agenda.domain.models.AgendaItem$Task"
+            android:name="taskId"
+            app:argType="string"
             app:nullable="true"
             />
         <argument
