--- a/app/src/main/res/layout/item_agenda.xml
+++ b/app/src/main/res/layout/item_agenda.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/agenda_item_card"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:layout_marginTop="3dp"
@@ -15,46 +15,53 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageButton
             android:id="@+id/done_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:src="@drawable/task_done_circle"
-            android:padding="5dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="12dp"
+            android:background="@null"
+            android:padding="5dp"
+            android:src="@drawable/task_done_circle"
+            android:layout_marginTop="13dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         </ImageButton>
 
         <TextView
             android:id="@+id/agenda_item_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="24dp"
+            android:fontFamily="@font/inter_bold"
             android:text="Project X"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:fontFamily="@font/inter_bold"
-            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@id/options_button"
             app:layout_constraintStart_toEndOf="@id/done_button"
-            app:layout_constraintTop_toTopOf="@id/done_button"
-            app:layout_constraintBottom_toBottomOf="@id/done_button">
+            app:layout_constraintTop_toTopOf="parent">
         </TextView>
 
         <TextView
             android:id="@+id/agenda_item_description"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/inter_regular"
             android:text="Amet minim non deserunt"
             android:textColor="@color/dark_gray"
             android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@id/options_button"
+            app:layout_constraintBottom_toTopOf="@id/agenda_item_date"
             app:layout_constraintStart_toStartOf="@id/agenda_item_title"
-            app:layout_constraintTop_toBottomOf="@id/agenda_item_title"></TextView>
+            app:layout_constraintTop_toBottomOf="@id/agenda_item_title">
+        </TextView>
 
         <TextView
             android:id="@+id/options_button"
