-Gets agenda item info from broadcast receiver -Changes agenda item notification scheduler to only take reminder time and ID -Uses default arg for IsInEditMode in AgendaNotificationService.kt

--- a/app/src/main/res/navigation/event_nav.xml
+++ b/app/src/main/res/navigation/event_nav.xml
@@ -17,7 +17,8 @@
             app:nullable="true" />
         <argument
             android:name="isInEditMode"
-            app:argType="boolean" />
+            app:argType="boolean"
+            android:defaultValue="false"/>
         <action
             android:id="@+id/action_eventDetailFragment_to_photoDetailFragment"
             app:destination="@id/photoDetailFragment" />
