--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -72,6 +72,7 @@
         <argument
             android:name="isInEditMode"
             app:argType="boolean"
+            android:defaultValue="false"
             />
     </fragment>
     <fragment
@@ -87,6 +88,7 @@
         <argument
             android:name="isInEditMode"
             app:argType="boolean"
+            android:defaultValue="false"
             />
     </fragment>
     <fragment
