--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -46,10 +46,12 @@
             <argument
                 android:name="id"
                 app:argType="string"
-                app:nullable="true" />
+                app:nullable="true"
+                android:defaultValue="@null"/>
             <argument
                 android:name="isInEditMode"
-                app:argType="boolean" />
+                app:argType="boolean"
+                android:defaultValue="false"/>
             </action>
         <action
             android:id="@+id/action_agendaFragment_to_reminderDetailFragment"
@@ -68,6 +70,7 @@
             android:name="id"
             app:argType="string"
             app:nullable="true"
+            android:defaultValue="@null"
             />
         <argument
             android:name="isInEditMode"
@@ -84,6 +87,7 @@
             android:name="id"
             app:argType="string"
             app:nullable="true"
+            android:defaultValue="@null"
             />
         <argument
             android:name="isInEditMode"
