Revert "-Checks if token is valid or offline"
This reverts commit 381b18caab2992460908dee4dd04ecfaae8beb6f.

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -46,12 +46,10 @@
             <argument
                 android:name="id"
                 app:argType="string"
-                app:nullable="true"
-                android:defaultValue="@null"/>
+                app:nullable="true" />
             <argument
                 android:name="isInEditMode"
-                app:argType="boolean"
-                android:defaultValue="false"/>
+                app:argType="boolean" />
             </action>
         <action
             android:id="@+id/action_agendaFragment_to_reminderDetailFragment"
@@ -70,7 +68,6 @@
             android:name="id"
             app:argType="string"
             app:nullable="true"
-            android:defaultValue="@null"
             />
         <argument
             android:name="isInEditMode"
@@ -87,7 +84,6 @@
             android:name="id"
             app:argType="string"
             app:nullable="true"
-            android:defaultValue="@null"
             />
         <argument
             android:name="isInEditMode"
