-adds date arguments to agenda fragments -changes minifyEnabled to true

--- a/app/src/main/res/navigation/event_nav.xml
+++ b/app/src/main/res/navigation/event_nav.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_eventDetailFragment_to_photoDetailFragment"
             app:destination="@id/photoDetailFragment" />
+        <argument
+            android:name="initialDate"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/photoDetailFragment"
